# hash-miner

./: .gitignore  Cargo.toml  README.md  check_events.py  dashboard.py  monitor.py  notify.sh
src/: main.rs
