[package]
name = "hash256-gpu-miner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full", "parking_lot"] }
ethers = { version = "2.0", features = ["legacy"] }
sha3 = "0.10"
hex = "0.4"
dotenv = "0.15"
ocl = "0.19"
anyhow = "1.0"
rand = "0.8"
serde_json = "1.0"
chrono = "0.4"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "http2"] }
